# aubystd

./: Cargo.toml  build.nu  build.rs  flake.nix  readme.md  rustc-ice-2025-06-29T04_28_06-2709264.txt  rustc-ice-2025-06-29T04_28_06-2709266.txt
.cargo/: config.toml  faux-rustc.nu  prefix.rs
examples/: dst.rs  show_and_tell.rs
macros/: Cargo.toml
macros/src/: lib.rs
scratchpad/: Cargo.toml
scratchpad/src/: lib.rs
src/: internal.rs  lib.rs  rt.rs  thread.rs
src/alloc/: allocator.rs  array.rs  dst_allocator.rs  free.rs  item.rs  item_allocator.rs  mod.rs  scratchpad.rs  slice_dst.rs  uninit.rs  unsized_allocator.rs
src/alloc/allocator/: arena.rs  foreign.rs  mod.rs
src/alloc/allocator/foreign/: malloc.rs  mmap.rs  std_alloc.rs
src/alloc/allocators/: arena.rs  foreign.rs  mod.rs
src/alloc/strategy/: arc.rs  mod.rs  rc.rs  unique.rs
src/alloc/types/: mod.rs  string.rs  vec.rs
src/bool-ext/: mod.rs
src/futures/executors/: simple.rs
src/io/: mod.rs  platform.rs  stdio.rs
src/io/fs/: mod.rs
src/io/net/: tcp.rs
src/num/: mod.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  rt.rs  thread.rs
src/platform/linux/io/: mod.rs  tcp.rs
src/platform/linux/sync/: mod.rs  thread_parker.rs
src/platform/linux/thread/: x86_64.rs
src/types/: vec.rs
