[package]
name = "aubystd"
version = "0.1.0"
edition = "2024"

[dependencies]
aubystd-macros = { version = "0.1.0", path = "macros" }
bitflags = { version = "2.9.1", features = ["core"] }
libc = { version = "0.2.172", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
zerocopy = { version = "0.8.25", features = ["derive"] }

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["libc"]
libc = []
alloc = []

[target.'cfg(target_os = "linux")'.dependencies]
syscalls = { version = "0.6.18", default-features = false }

[workspace]
resolver = "3"
members = ["macros", "scratchpad"]
